cmake_minimum_required(VERSION 3.8.0)
project(lua)
add_subdirectory(lua/src)
#add_subdirectory(ai)
add_subdirectory(chestnut)
add_subdirectory(config)
add_subdirectory(xluasocket)
add_subdirectory(navigation)
add_subdirectory(lpeg)
add_subdirectory(sproto)
add_subdirectory(skynet)
add_subdirectory(timer)
add_subdirectory(random)
add_subdirectory(md5)
add_subdirectory(mt_rand)
add_subdirectory(rapidjson)
add_subdirectory(kcp)
add_subdirectory(fixedptmath)