cmake_minimum_required(VERSION 3.8.0)
project(lua)
option(PRO_SKYNET "option for project lua" OFF)

macro(source_group_by_dir proj_dir source_files)
    if(MSVC OR APPLE)
        get_filename_component(sgbd_cur_dir ${proj_dir} ABSOLUTE)
        foreach(sgbd_file ${${source_files}})
			get_filename_component(sgbd_abs_file ${sgbd_file} ABSOLUTE)
            file(RELATIVE_PATH sgbd_fpath ${sgbd_cur_dir} ${sgbd_abs_file})
            string(REGEX REPLACE "\(.*\)/.*" \\1 sgbd_group_name ${sgbd_fpath})
            string(COMPARE EQUAL ${sgbd_fpath} ${sgbd_group_name} sgbd_nogroup)
            string(REPLACE "/" "\\" sgbd_group_name ${sgbd_group_name})
            if(sgbd_nogroup)
                set(sgbd_group_name "\\")
            endif(sgbd_nogroup)
            source_group(${sgbd_group_name} FILES ${sgbd_file})
        endforeach(sgbd_file)
    endif(MSVC OR APPLE)
endmacro(source_group_by_dir)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/luaclib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/luaclib)

add_subdirectory(lua/src)
add_subdirectory(http-parser)
add_subdirectory(fixmath)
add_subdirectory(chestnut)
add_subdirectory(xluasocket)
add_subdirectory(navigation)
add_subdirectory(lpeg)
add_subdirectory(lsignal)
add_subdirectory(sproto)
add_subdirectory(skynet)
add_subdirectory(timer)
add_subdirectory(random)
add_subdirectory(md5)
add_subdirectory(mt_rand)
add_subdirectory(rapidjson)
add_subdirectory(redis)
add_subdirectory(kcp)
add_subdirectory(socket)
add_subdirectory(luafilesystem)
#add_subdirectory(ball)
add_subdirectory(hexmap)
#add_subdirectory(xlog)
add_subdirectory(timesync)