project(fixedptmath)
aux_source_directory(. SRC_LIST)
aux_source_directory(./libfixmath SRC_LIST)
message(STATUS ${SRC_LIST})
include_directories(../lua-5.3.5/src)
ADD_DEFINITIONS(-DLUA_BUILD_AS_DLL)
add_library(fixedptmath SHARED ${SRC_LIST})
set_target_properties(fixedptmath PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_DEBUG ../../bin)
set_target_properties(fixedptmath PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ../../bin)
target_link_libraries(fixedptmath ../../bin/liblua)
ADD_DEPENDENCIES(fixedptmath lua)